logo addition and new changes

--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
 					</div>
 					<div class="row">
 						<div class="col">
-							<small>@rex.otto</small>
+							<span class="logo-link-container"><img src="./logo.png" alt="" srcset=""></span>
+							<small>/welfred.thoughts</small>
 						</div>
 					</div>
 				</div>
 				<div class="quote-description col-md-6 col-sm-12">
 					<div class="row">
 						<div class="col">
+							<h2 style="font-weight: bold" >#Day 1</h2>
 							<p>
 								You can have properly indented paragraphs within list items. Notice the blank line above, and the leading spaces (at least one, but we'll use three here to also align the raw Markdown).
 								To have a line break without a paragraph, you will need to use two trailing spaces.
