smooth scroll adding

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					to come out from negativity. 
 				</h3>
 			</div>
-			<div class="inner-container row">
+			<div class="inner-container row" id="1">
 				<div class="quote-container col-md-6 col-sm-12">
 					<div class="row">
 						<div class="col">
@@ -28,14 +28,14 @@
 					<div class="row">
 						<div class="col">
 							<span class="logo-link-container"><img src="./logo.png" alt="" srcset=""></span>
-							<small>/welfred.thoughts</small>
+							<small>/WelfredUser</small>
 						</div>
 					</div>
 				</div>
 				<div class="quote-description col-md-6 col-sm-12">
 					<div class="row">
 						<div class="col">
-							<h2 style="font-weight: bold" >#Day 1</h2>
+							<h2 class="post-count-head" >#1</h2>
 							<p>
 								You can have properly indented paragraphs within list items. Notice the blank line above, and the leading spaces (at least one, but we'll use three here to also align the raw Markdown).
 								To have a line break without a paragraph, you will need to use two trailing spaces.
@@ -45,7 +45,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="inner-container row">
+			<div class="inner-container row" id="2">
 				<div class="quote-container col-md-6 col-sm-12">
 					<div class="row">
 						<div class="col">
@@ -54,13 +54,15 @@
 					</div>
 					<div class="row">
 						<div class="col">
-							<small>@rex.otto</small>
+							<span class="logo-link-container"><img src="./logo.png" alt="" srcset=""></span>
+							<small>/WelfredUser</small>
 						</div>
 					</div>
 				</div>
 				<div class="quote-description col-md-6 col-sm-12">
 					<div class="row">
 						<div class="col">
+							<h2 class="post-count-head" >#1</h2>
 							<p>
 								You can have properly indented paragraphs within list items. Notice the blank line above, and the leading spaces (at least one, but we'll use three here to also align the raw Markdown).
 								To have a line break without a paragraph, you will need to use two trailing spaces.
@@ -70,6 +72,34 @@
 					</div>
 				</div>
 			</div>
+			<div class="inner-container row" id="3">
+				<div class="quote-container col-md-6 col-sm-12">
+					<div class="row">
+						<div class="col">
+							<p class="text-center">Everything will come to you at right time! <span>Keep Believing!</span></p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col">
+							<span class="logo-link-container"><img src="./logo.png" alt="" srcset=""></span>
+							<small>/WelfredUser</small>
+						</div>
+					</div>
+				</div>
+				<div class="quote-description col-md-6 col-sm-12">
+					<div class="row">
+						<div class="col">
+							<h2 class="post-count-head" >#1</h2>
+							<p>
+								You can have properly indented paragraphs within list items. Notice the blank line above, and the leading spaces (at least one, but we'll use three here to also align the raw Markdown).
+								To have a line break without a paragraph, you will need to use two trailing spaces.
+								Note that this line is separate, but within the same paragraph.
+								(This is contrary to the typical <span>GFM line break</span> behaviour, where trailing spaces are not required.)</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			
     </div>
 </body>
 </html>
