--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<h2 class="post-count-head" >#1</h2>
 						<br>
 						<p>
-							While the world full of complaint, be the first one who can say <span>gratitude</span>. 
+							While the world full of complaints, be the first one who can say <span>gratitude</span>. 
 							<br>
 							Everyone ready to complain like I don't have money to start something new, I don't have the right skill to get a job I desire.
 							<br>
@@ -59,7 +59,42 @@
 							So, stop seeing the complaints, <span>hustle</span> every day, do whatever it takes. The success is in your doorstep.
 							<a href="https://medium.com/@WelfredUser/start-where-you-are-use-what-you-have-do-what-you-can-b9ad25539398" target="__blank">Read more</a>
 						</p> 
-					</div>ß
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="inner-container row" id="2">
+			<div class="quote-container col-md-6 col-sm-12">
+				<div class="row">
+					<div class="col">
+						<p class="text-center">
+              You'll never change your life until you <span>change</span> something you do daily. The secret of your <span>success</span>
+               is found in your 
+              <span>daily routine</span>.
+						</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						<span class="logo-link-container"><img src="./logo.png" alt="" srcset=""></span>
+						<small>/WelfredUser</small>
+					</div>
+				</div>
+			</div>
+			<div class="quote-description col-md-6 col-sm-12">
+				<div class="row">
+					<div class="col">
+            <h2 class="post-count-head" >#2</h2>
+              <br>
+              Our future life depends on what we do daily. Our daily routine is the base for future success. <br>
+              It's time to <span>train</span> our mind towards success. 
+              It's time to come out from depression. <br>
+              Don't be in the <span>comfort zone</span>. <br> <br>
+              Schedule your time. Stay <span>committed</span>. Be <span>positive</span>.<br>
+              Stop wasting time. It's time to <span>build</span> a better future.
+							<!-- <a href="https://medium.com/@WelfredUser/start-where-you-are-use-what-you-have-do-what-you-can-b9ad25539398" target="__blank">Read more</a> -->
+						</p> 
+					</div>
 				</div>
 			</div>
 		</div>
