--- a/index.html
+++ b/index.html
@@ -1,103 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="We all are surrounded by the negativity. We can't survive if we don't think positively. Here I'm registering my positive thought to help others 
-	to come out from negativity.">	
-	<meta name="author" content="Welfred User">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link href="https://fonts.googleapis.com/css?family=Acme|Lato:400,900|Open+Sans&display=swap" rel="stylesheet">
-	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <title>100 Days of Positivity by Welfred User</title>
-	<link rel="stylesheet" href="./custom.css">
-	<link rel="shortcut icon" href="logo.png" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="We all are surrounded by the negativity. We can't survive if we don't think positively. Here I'm registering my positive thought to help others 
+	to come out from negativity."
+    />
+    <meta name="author" content="Welfred User" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Acme|Lato:400,900|Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <title>100 Days of Positivity by Welfred User</title>
+    <link rel="stylesheet" href="./custom.css" />
+    <link rel="shortcut icon" href="logo.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 
-<body>
-	<div class="container">
-		<div class="text-center header-container">
-			<h1 class="page-header">100 Days of <span>Positivity</span></h1>
-			<h3 class="page-subtext">We all are surrounded by the negativity. We can't survive if we don't think positively. Here I'm registering my positive thought to help others 
-				to come out from negativity. 
-			</h3>
-		</div>
-		<div class="inner-container row" id="1">
-			<div class="quote-container col-md-6 col-sm-12">
-				<div class="row">
-					<div class="col">
-						<p class="text-center">
-							Start <span>where</span> you are,
-							<br>
-							Use <span>what</span> you have,
-							<br> 
-							<span>Do</span> what you can!
-						</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col">
-						<span class="logo-link-container"><img src="./logo.png" alt="" srcset=""></span>
-						<small>/WelfredUser</small>
-					</div>
-				</div>
-			</div>
-			<div class="quote-description col-md-6 col-sm-12">
-				<div class="row">
-					<div class="col">
-						<h2 class="post-count-head" >#1</h2>
-						<br>
-						<p>
-							While the world full of complaints, be the first one who can say <span>gratitude</span>. 
-							<br>
-							Everyone ready to complain like I don't have money to start something new, I don't have the right skill to get a job I desire.
-							<br>
-							But the one who starts working beyond those complaints is the one who deserves <span>success</span>.
-							<br>
-							<br>
-							So, stop seeing the complaints, <span>hustle</span> every day, do whatever it takes. The success is in your doorstep.
-							<a href="https://medium.com/@WelfredUser/start-where-you-are-use-what-you-have-do-what-you-can-b9ad25539398" target="__blank">Read more</a>
-						</p> 
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="inner-container row" id="2">
-			<div class="quote-container col-md-6 col-sm-12">
-				<div class="row">
-					<div class="col">
-						<p class="text-center">
-              You'll never change your life until you <span>change</span> something you do daily. The secret of your <span>success</span>
-               is found in your 
-              <span>daily routine</span>.
-						</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col">
-						<span class="logo-link-container"><img src="./logo.png" alt="" srcset=""></span>
-						<small>/WelfredUser</small>
-					</div>
-				</div>
-			</div>
-			<div class="quote-description col-md-6 col-sm-12">
-				<div class="row">
-					<div class="col">
-            <h2 class="post-count-head" >#2</h2>
-              <br>
-              Our future life depends on what we do daily. Our daily routine is the base for future success. <br>
-              It's time to <span>train</span> our mind towards success. 
-              It's time to come out from depression. <br>
-              Don't be in the <span>comfort zone</span>. <br> <br>
-              Schedule your time. Stay <span>committed</span>. Be <span>positive</span>.<br>
-              Stop wasting time. It's time to <span>build</span> a better future.
-							<!-- <a href="https://medium.com/@WelfredUser/start-where-you-are-use-what-you-have-do-what-you-can-b9ad25539398" target="__blank">Read more</a> -->
-						</p> 
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</body>
+  <body>
+    <div class="container">
+      <div class="text-center header-container">
+        <h1 class="page-header">100 Days of <span>Positivity</span></h1>
+        <h3 class="page-subtext">
+          We all are surrounded by the negativity. We can't survive if we don't
+          think positively. Here I'm registering my positive thought to help
+          others to come out from negativity.
+        </h3>
+      </div>
+      <div class="inner-container row" id="1">
+        <div class="quote-container col-md-6 col-sm-12">
+          <div class="row">
+            <div class="col">
+              <p class="text-center">
+                Start <span>where</span> you are,
+                <br />
+                Use <span>what</span> you have,
+                <br />
+                <span>Do</span> what you can!
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <span class="logo-link-container"
+                ><img src="./logo.png" alt="" srcset=""
+              /></span>
+              <small>/WelfredUser</small>
+            </div>
+          </div>
+        </div>
+        <div class="quote-description col-md-6 col-sm-12">
+          <div class="row">
+            <div class="col">
+              <h2 class="post-count-head">#1</h2>
+              <br />
+              <p>
+                While the world full of complaints, be the first one who can say
+                <span>gratitude</span>.
+                <br />
+                Everyone ready to complain like I don't have money to start
+                something new, I don't have the right skill to get a job I
+                desire.
+                <br />
+                But the one who starts working beyond those complaints is the
+                one who deserves <span>success</span>.
+                <br />
+                <br />
+                So, stop seeing the complaints, <span>hustle</span> every day,
+                do whatever it takes. The success is in your doorstep.
+                <a
+                  href="https://medium.com/@WelfredUser/start-where-you-are-use-what-you-have-do-what-you-can-b9ad25539398"
+                  target="__blank"
+                  >Read more</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="inner-container row" id="2">
+        <div class="quote-container col-md-6 col-sm-12">
+          <div class="row">
+            <div class="col">
+              <p class="text-center">
+                You'll never change your life until you
+                <span>change</span> something you do daily. The secret of your
+                <span>success</span>
+                is found in your
+                <span>daily routine</span>.
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <span class="logo-link-container"
+                ><img src="./logo.png" alt="" srcset=""
+              /></span>
+              <small>/WelfredUser</small>
+            </div>
+          </div>
+        </div>
+        <div class="quote-description col-md-6 col-sm-12">
+          <div class="row">
+            <div class="col">
+              <h2 class="post-count-head">#2</h2>
+              <br />
+              <p>
+                Our future life depends on what we do daily. Our daily routine
+                is the base for future success. <br />
+                It's time to <span>train</span> our mind towards success. It's
+                time to come out from depression. <br />
+                Don't be in the <span>comfort zone</span>. <br />
+                <br />
+                Schedule your time. Stay <span>committed</span>. Be
+                <span>positive</span>.<br />
+                Stop wasting time. It's time to <span>build</span> a better
+                future.
+                <!-- <a href="https://medium.com/@WelfredUser/start-where-you-are-use-what-you-have-do-what-you-can-b9ad25539398" target="__blank">Read more</a> -->
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="inner-container row" id="3">
+        <div class="quote-container col-md-6 col-sm-12">
+          <div class="row">
+            <div class="col">
+              <p class="text-center">
+                <span><u>Confidence</u></span> <br />
+                Your energy introduces you before you even speak
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <span class="logo-link-container"
+                ><img src="./logo.png" alt="" srcset=""
+              /></span>
+              <small>/WelfredUser</small>
+            </div>
+          </div>
+        </div>
+        <div class="quote-description col-md-6 col-sm-12">
+          <div class="row">
+            <div class="col">
+              <h2 class="post-count-head">#3</h2>
+              <br />
+              <p>
+                Whatever you speak, speak with <span>confidence</span>, speak
+                louder. <br />
+                <span>Don't care</span> about right or wrong. Don't care about
+                "What people will say?". <br />
+                People will always criticize at the beginning. They will lower
+                their voice once you started to <span>speak confidently</span>.
+                <br />
+                You cannot be right all the time. But you can be confident. Use
+                your confidence as a tool. <br />
+                Don't let someone discourage you at any time. Speak so that
+                people will hear your <span>voice</span>. Speak so that people
+                give more <span>focus</span> to you. When your inner voice says
+                "I can't", retrain it to say "<span>I can</span>".
+
+                <!-- <a href="https://medium.com/@WelfredUser/start-where-you-are-use-what-you-have-do-what-you-can-b9ad25539398" target="__blank">Read more</a> -->
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
