--- a/index.html
+++ b/index.html
@@ -176,6 +176,47 @@
           </div>
         </div>
       </div>
+      <div class="inner-container row" id="4">
+        <div class="quote-container col-md-6 col-sm-12">
+          <div class="row">
+            <div class="col">
+              <p class="text-center">
+                You are today where your thoughts have brought you <br />
+                you will be tomorrow where your thoughts take you.
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <span class="logo-link-container"
+                ><img src="./logo.png" alt="" srcset=""
+              /></span>
+              <small>/WelfredUser</small>
+            </div>
+          </div>
+        </div>
+        <div class="quote-description col-md-6 col-sm-12">
+          <div class="row">
+            <div class="col">
+              <h2 class="post-count-head">#4</h2>
+              <br />
+              <p>
+                Our <span>mind</span> is everything. What you
+                <span>seed</span> you will reap. Why can't we fill it with
+                <span>good thoughts</span>? Why can't we think positive all the
+                time? <br /><br />
+                We should have the mindset to <span>think positively</span>. If
+                you started to think positive means you started to
+                <span>believe</span> yourself. <br /><br />
+                Self-belief is enough to <span>achieve</span> our dreams.
+                <br />
+                Train your mind with positive thoughts.
+                <!-- <a href="https://medium.com/@WelfredUser/start-where-you-are-use-what-you-have-do-what-you-can-b9ad25539398" target="__blank">Read more</a> -->
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
