--- a/index.html
+++ b/index.html
@@ -217,6 +217,50 @@
           </div>
         </div>
       </div>
+      <div class="inner-container row" id="5">
+        <div class="quote-container col-md-6 col-sm-12">
+          <div class="row">
+            <div class="col">
+              <p class="text-center">
+                Once you see the <span>results</span>, it becomes an
+                <span>addiction</span>
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <span class="logo-link-container"
+                ><img src="./logo.png" alt="" srcset=""
+              /></span>
+              <small>/WelfredUser</small>
+            </div>
+          </div>
+        </div>
+        <div class="quote-description col-md-6 col-sm-12">
+          <div class="row">
+            <div class="col">
+              <h2 class="post-count-head">#5</h2>
+              <br />
+              <p>
+                Work hard till you get one applause. <br />
+                Push hard till you see the tight muscles. <br />
+                Give your best till you earn your first 10$ <br />
+                <br />
+
+                Results will bring more positivity <br />
+                Positivity brings more energy to work hard. <br />
+                <br />
+
+                You'll start to love the process. ❤️<br />
+                There'll be no backward step once you started to move forward.
+                Make the step stronger and wiser.
+                <br />
+                <!-- <a href="https://medium.com/@WelfredUser/start-where-you-are-use-what-you-have-do-what-you-can-b9ad25539398" target="__blank">Read more</a> -->
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
